@@ -3,7 +3,7 @@
  * Written by Claudio Matsuoka, 2000-04-30
  * Based on J. Nick Koston's MikMod plugin for XMMS
  *
- * $Id: plugin.c,v 1.32 2007-10-18 21:13:05 cmatsuoka Exp $
+ * $Id: plugin.c,v 1.33 2007-10-18 23:07:09 cmatsuoka Exp $
  */
 
 #include <stdlib.h>
@@ -483,7 +483,7 @@ static void cleanup()
 
 static int is_our_file(char *filename)
 {
-	if (memcmp(filename, "file://", 7) == 0)
+	if (memcmp(filename, "file://", 7) == 0)	/* Audacious 1.4.0 */
 		filename += 7;
 
 	if (xmp_test_module(filename, NULL) == 0)
@@ -497,6 +497,9 @@ static void get_song_info(char *filename, char **title, int *length)
 {
 	char *x;
 	char name[XMP_NAMESIZE];
+
+	if (memcmp(filename, "file://", 7) == 0)	/* Audacious 1.4.0 */
+		filename += 7;
 
 	xmp_test_module(filename, name);
 
@@ -566,7 +569,7 @@ static void play_file(InputPlayback *ipb)
 	GtkTextIter start, end;
 #endif
 	
-	if (memcmp(filename, "file://", 7) == 0)
+	if (memcmp(filename, "file://", 7) == 0)	/* Audacious 1.4.0 */
 		filename += 7;
 
 	_D("play_file: %s", filename);
