@@ -1,7 +1,7 @@
 /* Fasttracker II module loader for xmp
  * Copyright (C) 1996-2007 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: xm_load.c,v 1.23 2007-10-18 18:25:10 cmatsuoka Exp $
+ * $Id: xm_load.c,v 1.24 2007-10-18 23:07:10 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -65,6 +65,7 @@ static int xm_load(struct xmp_mod_context *m, FILE *f, const int start)
     struct xm_instrument xi;
     struct xm_sample_header xsh[16];
     char tracker_name[21];
+    int fix_loop = 0;
 
     LOAD_INIT();
 
@@ -110,8 +111,10 @@ static int xm_load(struct xmp_mod_context *m, FILE *f, const int start)
 	    break;
     }
 
-    if (*tracker_name == 0)
+    if (*tracker_name == 0) {
 	strcpy(tracker_name, "Digitrakker");	/* best guess */
+	fix_loop = 1;
+    }
 
     if (!strncmp(tracker_name, "FastTracker v 2.00", 18)) {
 	strcpy(tracker_name, "old ModPlug Tracker");
@@ -368,6 +371,8 @@ load_instruments:
 
 		m->xxs[sample_num].len = xsh[j].length;
 		m->xxs[sample_num].lps = xsh[j].loop_start;
+		if (fix_loop && m->xxs[sample_num].lps > 0)
+		    m->xxs[sample_num].lps--;
 		m->xxs[sample_num].lpe = xsh[j].loop_start + xsh[j].loop_length;
 		m->xxs[sample_num].flg = xsh[j].type & XM_SAMPLE_16BIT ?
 		    WAVE_16_BITS : 0;
